fixed alignment glitch

--- a/styles.css
+++ b/styles.css
@@ -197,7 +197,7 @@ p {
 }
 
 .column {
-  margin: 25px;
+  margin: 20px;
   float: left;
   width: 30%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
